[tmux] Fix sending prefix to nested sessions

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -18,7 +18,8 @@ set-option -g mouse on
 set-option -g xterm-keys on
 
 # Send prefix to inside window (nested)
-bind-key -n C-b send-keys C-b
+# C-a C-a
+bind-key C-a send-prefix
 
 bind-key -n F2 set-option -g status  # toggle statusbar visibility
 
