[tmux] Add binding for sending C-b to nested sessions

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -20,6 +20,7 @@ set-option -g xterm-keys on
 # Send prefix to inside window (nested)
 # C-a C-a
 bind-key C-a send-prefix
+bind-key C-b send-keys C-b
 
 bind-key -n F2 set-option -g status  # toggle statusbar visibility
 
