[tmux] Let tmux-yank handle copying to clipboard

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -6,7 +6,6 @@ set-option -g prefix C-a
 set-window-option -g mode-keys vi
 bind [ copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind ] paste-buffer
 
 bind h select-pane -L
@@ -97,6 +96,8 @@ set -g terminal-overrides ',xterm-256color:Tc,sitm@,ritm@,st-256color:Tc,sitm@,r
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'  # C-a S-i to install
 set -g @plugin 'tmux-plugins/tmux-resurrect'  # C-a C-s to save; C-a C-r to restore
+
+set -g @plugin 'tmux-plugins/tmux-yank' # yank to OS clipboard
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg 'brightwhite'
