Tweak for working cursor shapes in nvim on mac

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -88,7 +88,7 @@ set -g display-panes-active-colour brightwhite
 
 # Enable 256 colours in terminal
 set -g default-terminal 'tmux-256color'
-set -g terminal-overrides ',xterm-256color:Tc,sitm@,ritm@,st-256color:Tc,sitm@,ritm@,xterm-termite:Tc,sitm@,ritm@,xterm-256color-italic:Tc,sitm@,ritm@'
+set -ga terminal-overrides ',xterm-256color:Tc,sitm@,ritm@,st-256color:Tc,sitm@,ritm@,xterm-termite:Tc,sitm@,ritm@,xterm-256color-italic:Tc,sitm@,ritm@'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'  # C-a S-i to install
