[WIP] Fish migration

--- a/home/config/tmux/tmux.conf
+++ b/home/config/tmux/tmux.conf
@@ -2,6 +2,9 @@
 unbind C-b
 set-option -g prefix C-a
 
+# use fish
+set-option -g default-shell $TMUX_SHELL
+
 # enable vi mode
 set-window-option -g mode-keys vi
 
@@ -21,7 +24,7 @@ bind-key C-b send-keys C-b
 bind-key -n F2 set-option -g status  # toggle statusbar visibility
 
 # Source config shortcut
-bind r source-file ~/.tmux.conf
+bind r source-file $TMUX_CONF
 
 # Map keys to split window in similar manner to terminator, split and create window in current dir
 unbind '"'
@@ -58,12 +61,12 @@ set -g status-style fg=colour7,bg=default
 
 # Status bar -right
 set -g status-left-length 30
-set -g status-right '#[fg=colour15] #H #[fg=default] | %d %b %R '
+set -g status-right '#[fg=colour15] #H #[fg=default] %d %b %R '
 
 # Status bar - left
 set -g status-left-length 30
 set -g status-left-style ''
-set -g status-left '#{prefix_highlight} #S |'
+set -g status-left '#{prefix_highlight} #S'
 
 # windows status bar
 set -g window-status-current-format ' #I:#W '
