--- a/home/config/tmux/tmux.conf
+++ b/home/config/tmux/tmux.conf
@@ -40,6 +40,8 @@ set -g set-titles-string '#W #h'
 # Constrain window's size only if smaller client uses it
 setw -g aggressive-resize on
 
+set -s escape-time 0
+
 # Don't auto rename after it was manually renamed
 set-option -g allow-rename off
 
