--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -59,6 +59,8 @@ setw -g pane-base-index 1
 # Store more history
 set -g history-limit 10000
 
+set -g set-clipboard on
+
 # Theming
 
 # Status bar
@@ -101,8 +103,11 @@ set -ga terminal-overrides ',xterm-256color:Tc,sitm@,ritm@,st-256color:Tc,sitm@,
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'  # C-a S-i to install
 set -g @plugin 'tmux-plugins/tmux-resurrect'  # C-a C-s to save; C-a C-r to restore
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tmux-yank' # yank to OS clipboard
+set -g @plugin 'tmux-plugins/tmux-copycat' # better searching, including regexps
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg 'brightwhite'
@@ -111,6 +116,3 @@ set -g @prefix_highlight_show_copy_mode 'off'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set -g set-clipboard on
-
-# vim: filetype=tmux
