--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,14 +1,7 @@
 {
-  "languageserver": {
-    "ccls": {
-      "command": "ccls",
-      "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-      "initializationOptions": {
-         "cache": {
-           "directory": ".ccls-cache"
-         }
-       }
-    }
-  }
+    "git.addedSign.hlGroup": "GitAdd",
+    "git.changedSign.hlGroup": "GitChange",
+    "git.removedSign.hlGroup": "GitDelete",
+    "git.topRemovedSign.hlGroup": "GitDelete",
+    "git.changeRemovedSign.hlGroup": "GitChangeDelete"
 }
