--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -3,5 +3,13 @@
     "git.changedSign.hlGroup": "GitChange",
     "git.removedSign.hlGroup": "GitDelete",
     "git.topRemovedSign.hlGroup": "GitDelete",
-    "git.changeRemovedSign.hlGroup": "GitChangeDelete"
+    "git.changeRemovedSign.hlGroup": "GitChangeDelete",
+    "languageserver": {
+        "bash": {
+          "command": "bash-language-server",
+          "args": ["start"],
+          "filetypes": ["sh"],
+          "ignoredRootPaths": ["~"]
+        }
+      }
 }
