Display coc indicators using ale

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+    "diagnostic.displayByAle": true,
     "git.addedSign.hlGroup": "GitAdd",
     "git.changedSign.hlGroup": "GitChange",
     "git.removedSign.hlGroup": "GitDelete",
