Update go settings

--- a/home/.config/Code/User/settings.json
+++ b/home/.config/Code/User/settings.json
@@ -76,5 +76,7 @@
   "workbench.colorTheme": "Gruvbox Dark Hard",
   "workbench.editor.tabSizing": "shrink",
   "workbench.iconTheme": "file-icons",
-  "workbench.settings.editor": "json"
+  "workbench.settings.editor": "json",
+  "go.formatTool": "goimports",
+  "go.useLanguageServer": true
 }
