--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,76 +1,103 @@
 # vim: set ft=ruby fdm=marker:
+
+# VARIABLES {{{
+set $mod Mod1
+set $browser "firefox"
+set $term "alacritty"
+set $lock_command "~/bin/lock_command.sh"
+set $bar_command "xfce4-panel"
+set $launcher_command "rofi -show drun -modi drun,run,window,ssh -show-icons -sidebar-mode -lines 8 -terminal $term"
+set $window_toggler "rofi -show window -show-icons"
+set $border_size 1
+set $font "pango:Noto Sans 10"
+
+font $font
+for_window [class="^.*"] border pixel $border_size
+# /VARIABLES }}}
+
+# COLORS {{{
+set $black         #1C1B19
+set $brightblack   #2D2C29
+set $red           #EF2F27
+set $brightred     #F75341
+set $green         #519F50
+set $brightgreen   #98BC37
+set $yellow        #FBB829
+set $brightyellow  #FED06E
+set $blue          #2C78BF
+set $brightblue    #68A8E4
+set $magenta       #E02C6D
+set $brightmagenta #FF5C8F
+set $cyan          #0AAEB3
+set $brightcyan    #53FDE9
+set $white         #918175
+set $brightwhite   #FCE8C3
+set $orange        #D75F00
+set $brightorange  #FF8700
+set $xgrey1        #262626
+set $xgrey2        #303030
+set $xgrey3        #3A3A3A
+set $xgrey4        #444444
+set $xgrey5        #4E4E4E
+set $gtk_theme_main #383838
+# /COLORS }}}
+
 # GAPS {{{
-gaps inner 10
-# gaps outer $gaps_outer
+gaps inner 8
+gaps outer 0
 # }}}
 
 # KEYMAP {{{
-
-# start a terminal
-bindsym $mod+Return exec --no-startup-id $term
-
-# launcher, window switcher
-bindsym $mod+d exec --no-startup-id $launcher
-
-# Web browser
-bindsym $mod+w exec --no-startup-id $browser
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# change focus
-# configured for vim-like keys
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-# configured to vim-like keys - hjkl
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal/vertical orientation
-# configured like my tmux config: horizontal: e, vertical: o
-bindsym $mod+e split h
-bindsym $mod+o split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+Shift+s layout stacking
-bindsym $mod+Shift+w layout tabbed
-bindsym $mod+Shift+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+floating_modifier          $mod
+bindsym $mod+Shift+q       kill
+bindsym $mod+f             fullscreen toggle
+bindsym $mod+Shift+space   floating toggle
+bindsym $mod+Shift+c       reload
+bindsym $mod+Shift+r       restart
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+space         focus mode_toggle
 
-# focus the parent container
-bindsym $mod+a focus parent
+## launch programs {{{
+bindsym $mod+Return        exec --no-startup-id $term
+bindsym $mod+d             exec --no-startup-id $launcher_command
+bindsym $mod+Ctrl+l        exec --no-startup-id $lock_command
+bindsym $mod+Tab           exec --no-startup-id $window_toggler
+bindsym $mod+w             exec --no-startup-id $browser
+## /launch programs }}}
 
-# focus the child container
-#bindsym $mod+d focus child
+## focus windows {{{
+bindsym $mod+h             focus left
+bindsym $mod+j             focus down
+bindsym $mod+k             focus up
+bindsym $mod+l             focus right
+bindsym $mod+Left          focus left
+bindsym $mod+Down          focus down
+bindsym $mod+Up            focus up
+bindsym $mod+Right         focus right
+## /focus windows }}}
+
+## move windows {{{
+bindsym $mod+Shift+h        move left
+bindsym $mod+Shift+j        move down
+bindsym $mod+Shift+k        move up
+bindsym $mod+Shift+l        move right
+bindsym $mod+Shift+Left     move left
+bindsym $mod+Shift+Down     move down
+bindsym $mod+Shift+Up       move up
+bindsym $mod+Shift+Right    move right
+## /move windows }}}
+
+## split container {{{
+bindsym $mod+e              split h
+bindsym $mod+o              split v
+## /split container }}}
+
+## change container layout {{{
+bindsym $mod+Shift+s        layout stacking
+bindsym $mod+Shift+w        layout tabbed
+bindsym $mod+Shift+e        layout toggle split
+## /change container layout }}}
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -102,179 +129,87 @@ bindsym $mod+c move absolute position center
 # Move container to the current position of the cursor
 bindsym $mod+m move position mouse
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
-
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-
-# lock
-bindsym $mod+Ctrl+l exec --no-startup-id $lock_command
-
-# resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+  bindsym h           resize shrink width 1 px or 1 ppt
+  bindsym j           resize grow height 1 px or 1 ppt
+  bindsym k           resize shrink height 1 px or 1 ppt
+  bindsym l           resize grow width 1 px or 1 ppt
+  bindsym Left        resize shrink width 1 px or 1 ppt
+  bindsym Down        resize grow height 1 px or 1 ppt
+  bindsym Up          resize shrink height 1 px or 1 ppt
+  bindsym Right       resize grow width 1 px or 1 ppt
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym ntilde resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
+# /KEYMAP }}}
 
-bindsym $mod+Tab exec $window_toggler
+# MULTIMEDIA KEYS {{{
+## volume controls {{{
+bindsym XF86AudioRaiseVolume        exec "amixer -D pulse sset Master 5%+"
+bindsym XF86AudioLowerVolume        exec "amixer -D pulse sset Master 5%-"
+bindsym $mod+XF86AudioRaiseVolume   exec "amixer -D pulse sset Master 1%+"
+bindsym $mod+XF86AudioLowerVolume   exec "amixer -D pulse sset Master 1%-"
+bindsym XF86AudioMute               exec "amixer sset Master -D pulse toggle"
+## /volume controls }}}
 
-# }}}
+## play/pause/next/prev song {{{
+bindsym XF86AudioPlay               exec "playerctl play-pause"
+bindsym XF86AudioNext               exec "playerctl next"
+bindsym XF86AudioPrev               exec "playerctl previous"
+## /play/pause/next/prev song }}}
+
+## screen brightness {{{
+bindsym XF86MonBrightnessUp         exec "xbacklight -inc 20"
+bindsym XF86MonBrightnessDown       exec "xbacklight -dec 20"
+## /screen brightness }}}
+# /MULTIMEDIA KEYS }}}
 
 # WINDOW COLORS {{{
-
-# set window colors
 #                       border          background       text           indicator
 client.focused          $brightblack    $brightblack     $orange        $blue
 client.unfocused        $gtk_theme_main $brightblack     $brightwhite   $gtk_theme_main
 client.focused_inactive $gtk_theme_main $brightblack     $brightyellow  $gtk_theme_main
 client.urgent           $gtk_theme_main $brightblack     $brightwhite   $gtk_theme_main
-
 # }}}
 
 # FLOATING WINDOWS {{{
+floating_minimum_size     240 x 100
+for_window [class="(?i)pavucontrol"]           floating enable
+for_window [class="(?i)nm-applet"]             floating enable
+for_window [class="(?i)gpick"]                 floating enable
+for_window [class="(?i)feh"]                   floating enable
+for_window [class="(?i)blueman-manager"]       floating enable
+for_window [class="(?i)nm-connection-editor"]  floating enable
+for_window [class="(?i)jetbrains-toolbox"]     floating enable
+for_window [class="(?i)lxappearance"]          floating enable
+for_window [class="(?i)tk"]                    floating enable
+for_window [class="(?i)pyxel"]                 floating enable
+for_window [class="(?i)gsimplecal"]            floating enable
+for_window [class="(?i)yakuake"]               floating enable
+for_window [class="(?i)xfce4-panel"]           floating enable
+# /FLOATING WINDOWS}}}
 
-for_window [class="(?i)pavucontrol"] floating enable
-for_window [class="(?i)nm-applet"] floating enable
-for_window [class="(?i)gpick"] floating enable
-for_window [class="(?i)feh"] floating enable
-for_window [class="(?i)blueman-manager"] floating enable
-for_window [class="(?i)nm-connection-editor"] floating enable
-for_window [class="(?i)jetbrains-toolbox"] floating enable
-for_window [class="(?i)lxappearance"] floating enable
-for_window [class="(?i)tk"] floating enable
-for_window [class="(?i)pyxel"] floating enable
-for_window [class="(?i)gsimplecal"] floating enable
-for_window [class="(?i)yakuake"] floating enable
-for_window [class="(?i)xfce4-panel"] floating enable
-# floating windows settings
-floating_minimum_size 240 x 100
-
-# }}}
-
-# disable window titlebars, set border size
-for_window [class="^.*"] border pixel $border_size
-for_window [class="(?i)yakuake"] border pixel 1
-# vim: set ft=ruby:
-
-set $mod Mod1
-set $sup Mod4
-
-set $browser "firefox"
-set $term "alacritty"
-set $lock_command "~/bin/lock_command.sh"
-set $bar_command "xfce4-panel"
-
-set $launcher "rofi -show drun -modi drun,run,window,ssh -show-icons -sidebar-mode -lines 8 -terminal $term"
-set $window_toggler "rofi -show window -show-icons"
-
-
-# srcery-based palette
-set $black         #1C1B19
-set $brightblack   #2D2C29
-set $red           #EF2F27
-set $brightred     #F75341
-set $green         #519F50
-set $brightgreen   #98BC37
-set $yellow        #FBB829
-set $brightyellow  #FED06E
-set $blue          #2C78BF
-set $brightblue    #68A8E4
-set $magenta       #E02C6D
-set $brightmagenta #FF5C8F
-set $cyan          #0AAEB3
-set $brightcyan    #53FDE9
-set $white         #918175
-set $brightwhite   #FCE8C3
-set $orange        #D75F00
-set $brightorange  #FF8700
-set $xgrey1        #262626
-set $xgrey2        #303030
-set $xgrey3        #3A3A3A
-set $xgrey4        #444444
-set $xgrey5        #4E4E4E
-set $gtk_theme_main #383838
-# vim: set ft=ruby
+# AUTOSTART {{{
 exec --no-startup-id "setxkbmap"
-# Ctrl instead of CapsLock
 exec --no-startup-id "setxkbmap -option ctrl:nocaps"
-# compositor - transparency, shadows and such
-exec_always --no-startup-id "compton --config ~/.config/compton/compton.conf -b"
-# notification daemon
+exec --no-startup-id "compton --config ~/.config/compton/compton.conf -b"
 exec --no-startup-id "/usr/lib/xfce4/notifyd/xfce4-notifyd"
-# power management
 exec --no-startup-id "xss-lock -- i3lock"
 exec --no-startup-id "mate-power-manager"
-# secrets handler for network manager applet to store passwords in
 exec --no-startup-id "gnome-keyring-daemon -d"
-# blue light filter (uses geoclue for location - intensity depends on daylight)
 exec --no-startup-id "redshift-gtk"
-# automount external drives etc
 exec --no-startup-id "udiskie"
-# gui for network manager
 exec --no-startup-id "nm-applet"
-# gui for bluetooth devices management
 exec --no-startup-id "blueman-applet"
-# clipboard manager
 exec --no-startup-id "clipit"
-# pulseaudio sys tray
 exec --no-startup-id "pasystray"
-# tray and status bar
-exec_always --no-startup-id $bar_command
-# Multimedia Keys
-# volume control
-bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+ && pkill -RTMIN+23 i3blocks
-bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%- && pkill -RTMIN+23 i3blocks
-
-# granular volume control
-bindsym $mod+XF86AudioRaiseVolume exec amixer -D pulse sset Master 1%+ && pkill -RTMIN+23 i3blocks
-bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill -RTMIN+23 i3blocks
-
-# mute
-bindsym XF86AudioMute exec amixer sset Master -D pulse toggle && pkill -RTMIN+23 i3blocks
-
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightnessc
-
-# vim: set ft=ruby:
-# vim: set ft=ruby:
-font pango:Noto Sans 10
-
-set $gaps_inner 0
-set $gaps_outer 0
-
-set $border_size 1
-# vim: set ft=ruby:
-
-# XRandr - screen layout
-exec --no-startup-id ~/.screenlayout/layout.sh
-# Wallpaper (AFTER layout)
-exec --no-startup-id "nitrogen --restore"
-# Systray
+exec --no-startup-id "~/.screenlayout/layout.sh"
+exec --no-startup-id "nitrogen --restore"  # should be after screen layout
 exec --no-startup-id "synergy"
 exec --no-startup-id "slack"
+exec --no-startup-id $bar_command
+# /AUTOSTART }}}
+
