--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -7,7 +7,7 @@ set $term "alacritty"
 set $lock_command "~/bin/lock_screen.sh || i3lock"
 set $bar_command "xfce4-panel"
 set $compositor_command "killall compton; compton --config ~/.config/compton/config -b"
-set $launcher_command "rofi -show drun -modi drun,run,window,ssh -show-icons -sidebar-mode -lines 8 -terminal $term"
+set $launcher_command "rofi -show drun -modi drun,run,window,ssh -terminal alacritty"
 set $toggle_windows_command "rofi -show window -show-icons"
 set $border_size 1
 set $font "pango:Noto Sans 10"
