Smaller gaps, kitty instead of alacritty

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -3,11 +3,11 @@
 # VARIABLES {{{
 set $mod Mod1
 set $browser "firefox"
-set $term "alacritty"
+set $term "kitty"
 set $lock_command "~/bin/lock_screen.sh || i3lock"
 set $bar_command "xfce4-panel"
 set $compositor_command "killall compton; compton --config ~/.config/compton/config -b"
-set $launcher_command "rofi -show drun -modi drun,run,window,ssh -terminal alacritty"
+set $launcher_command "rofi -show drun -modi drun,run,window,ssh -terminal kitty"
 set $toggle_windows_command "rofi -show window -show-icons"
 set $border_size 1
 set $font "pango:Noto Sans 10"
@@ -45,9 +45,9 @@ set $gtk_theme_main #383838
 
 # GAPS {{{
 # gaps can also have negative values
-gaps inner 8
+gaps inner 6
 gaps outer 0
-gaps top 0
+# gaps top 0
 # }}}
 
 # KEYMAP {{{
