--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -6,7 +6,7 @@ set $browser "firefox"
 set $term "kitty"
 set $lock_command "~/bin/lock_screen.sh || i3lock"
 set $bar_command "xfce4-panel"
-set $compositor_command "killall compton; compton --config ~/.config/compton/config -b"
+set $compositor_command "compton --config ~/.config/compton/config -b"
 set $launcher_command "rofi -show drun -modi drun,run,window,ssh -terminal kitty"
 set $toggle_windows_command "rofi -show window -show-icons"
 set $border_size 1
@@ -45,8 +45,8 @@ set $gtk_theme_main #383838
 
 # GAPS {{{
 # gaps can also have negative values
-gaps inner 6
-gaps outer 0
+# gaps inner 6
+# gaps outer 0
 # gaps top 0
 # }}}
 
