--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -12,6 +12,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind J next-window
+bind K next-window
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
@@ -20,18 +22,15 @@ set-option -g mouse on
 set-option -g xterm-keys on
 
 # Send prefix to inside window (nested)
-# C-a C-a
 bind-key C-a send-prefix
 bind-key C-b send-keys C-b
 
 bind-key -n F2 set-option -g status  # toggle statusbar visibility
 
 # Source config shortcut
-bind r source-file $TMUX_CONF
+bind r source-file ~/.tmux.conf
 
 # Map keys to split window in similar manner to terminator, split and create window in current dir
-unbind '"'
-unbind %
 bind o split-window -v -c "#{pane_current_path}"
 bind e split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -55,10 +54,7 @@ set-option -g mode-keys vi
 # Start window and pane numbering at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
-
-# Store more history
 set -g history-limit 10000
-
 set -g set-clipboard on
 
 # Theming
@@ -85,8 +81,8 @@ setw -g window-status-activity-style fg=brightwhite
 setw -g window-status-bell-style fg=blue,bg=yellow
 
 # Pane border
-setw -g pane-border-style fg=colour15
-setw -g pane-active-border-style fg=colour8
+setw -g pane-border-style fg=colour8
+setw -g pane-active-border-style fg=colour11
 
 set -g message-command-style fg=colour0,bg=colour12,bold
 setw -g mode-style fg=colour0,bold,bg=colour11
