Use appropriate env var

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,7 +2,6 @@
 unbind C-b
 set-option -g prefix C-a
 
-# use fish
 set-option -g default-shell $TMUX_SHELL
 
 # enable vi mode
@@ -12,7 +11,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind J next-window
+bind J previous-window
 bind K next-window
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
