Display current user in status

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -63,7 +63,7 @@ set -g status-style fg=colour7,bg=default
 
 # Status bar -right
 set -g status-left-length 30
-set -g status-right '#[fg=colour15] #H #[fg=default] %d %b %R '
+set -g status-right '#[fg=colour15] #(whoami)@#h #[fg=default]%d %b %R '
 
 # Status bar - left
 set -g status-left-length 30
