Update Neovim config (that's precise!)

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,14 +1,15 @@
 {
     "diagnostic.displayByAle": true,
-    "git.addedSign.hlGroup": "GitAdd",
-    "git.changedSign.hlGroup": "GitChange",
-    "git.removedSign.hlGroup": "GitDelete",
-    "git.topRemovedSign.hlGroup": "GitDelete",
-    "git.changeRemovedSign.hlGroup": "GitChangeDelete",
-    "git.addedSign.text": "ga",
-    "git.changedSign.text": "gc",
-    "git.removedSign.text": "gc",
-    "git.changeRemovedSign.text": "gc",
+    "git.enableGutters": false,
+    // "git.addedSign.hlGroup": "GitAdd",
+    // "git.changedSign.hlGroup": "GitChange",
+    // "git.removedSign.hlGroup": "GitDelete",
+    // "git.topRemovedSign.hlGroup": "GitDelete",
+    // "git.changeRemovedSign.hlGroup": "GitChangeDelete",
+    // "git.addedSign.text": "+",
+    // "git.changedSign.text": "~",
+    // "git.removedSign.text": "-",
+    // "git.changeRemovedSign.text": "~",
     "languageserver": {
         "bash": {
           "command": "bash-language-server",
