--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -11,10 +11,12 @@ env THEME_ENABLE_GLYPHS=1
 
 # fonts {{{
 font_size 11.0
-font_family      Iosevka
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+
+font_family      Iosevka Nerd Font Regular
+bold_font        Iosevka Nerd Font Bold
+italic_font      Iosevka Nerd Font Italic
+bold_italic_font Iosevka Nerd Font Bold
+
 disable_ligatures always
 # }}}
 
