--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ home/.config/nvim/*
 !home/.config/nvim/coc-settings.json
 
 home/.config/fish/functions/*
+!home/.config/fish/conf.d/
 !home/.config/fish/functions/fish_prompt.fish
 !home/.config/fish/functions/fish_mode_prompt.fish
 
