Disable clipboard append in Kitty

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -2,11 +2,13 @@
 
 # general {{{
 # term  xterm-256color-italic
+clipboard_control write-clipboard write-primary no-append
 # /general }}}
 
 # env {{{
 env TMUX_ALWAYS=1
 env THEME_ENABLE_GLYPHS=1
+env FISH_NOT_BASH=1
 # }}}
 
 # fonts {{{
