--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -201,7 +201,7 @@ exec --no-startup-id "redshift-gtk"
 exec --no-startup-id "udiskie"
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "blueman-applet"
-exec --no-startup-id "clipit"
+# exec --no-startup-id "xfce4-clipman"
 exec --no-startup-id "pasystray"
 exec --no-startup-id "~/.screenlayout/layout.sh"
 exec --no-startup-id "nitrogen --restore"  # should be after screen layout
