Add Tmux selection mode notification, tweak colors

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -103,9 +103,11 @@ set -g @plugin 'tmux-plugins/tmux-yank' # yank to OS clipboard
 set -g @plugin 'tmux-plugins/tmux-copycat' # better searching, including regexps
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @prefix_highlight_fg 'brightwhite'
-set -g @prefix_highlight_bg 'blue'
-set -g @prefix_highlight_show_copy_mode 'off'
+set -g @prefix_highlight_fg black
+set -g @prefix_highlight_bg brightblue
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
+set -g @prefix_highlight_copy_prompt 'VISUAL'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
