Use new font, add light theme

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -14,57 +14,71 @@ env FISH_NOT_BASH=1
 # fonts {{{
 font_size 11.0
 
-font_family      Iosevka Nerd Font Regular
-bold_font        Iosevka Nerd Font Bold
-italic_font      Iosevka Nerd Font Italic
-bold_italic_font Iosevka Nerd Font Bold
+font_family      Fantasque Sans Mono
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 disable_ligatures always
 # }}}
 
 # colorscheme {{{
-cursor                #ebdbb2
-foreground            #ebdbb2
+background_opacity 1.0
+
+## gruvbox dark hard {{{
+env THEME_BACKGROUND=dark
+macos_titlebar_color  #1d2021
 background            #1d2021
+foreground            #ebdbb2
+cursor                #ebdbb2
 selection_foreground  #655b53
 selection_background  #ebdbb2
 url_color             #d65c0d
+color0                #272727
+color8                #928373
+color1                #cc231c
+color9                #fb4833
+color2                #989719
+color10               #b8ba25
+color3                #d79920
+color11               #fabc2e
+color4                #448488
+color12               #83a597
+color5                #b16185
+color13               #d3859a
+color6                #689d69
+color14               #8ec07b
+color7                #a89983
+color15               #ebdbb2
+## /gruvbox dark hard }}}
 
-background_opacity 1.0
+## gruvbox light soft {{{
+# env THEME_BACKGROUND=light
+# macos_titlebar_color  #f2e5bc
+# background            #f2e5bc
+# foreground            #3c3836
+# cursor                #928374
+# selection_foreground  #3c3836
+# selection_background  #928374
+# url_color             #d65c0d
+# color0                #f2e5bc
+# color8                #282828
+# color1                #cc241d
+# color9                #9d0006
+# color2                #98971a
+# color10               #79740e
+# color3                #d79921
+# color11               #b57614
+# color4                #458588
+# color12               #076678
+# color5                #b16286
+# color13               #8f3f71
+# color6                #689d6a
+# color14               #427b58
+# color7                #7c6f64
+# color15               #928374
+## /gruvbox light soft }}}
 
-# black
-color0   #272727
-color8   #928373
-
-# red
-color1   #cc231c
-color9   #fb4833
-
-# green
-color2   #989719
-color10  #b8ba25
-
-# yellow
-color3   #d79920
-color11  #fabc2e
-
-# blue
-color4  #448488
-color12 #83a597
-
-# magenta
-color5   #b16185
-color13  #d3859a
-
-# cyan
-color6   #689d69
-color14  #8ec07b
-
-# white
-color7   #a89983
-color15  #ebdbb2
-
-macos_titlebar_color #1d2021
 # }}}
 
 # tabs {{{
