--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -95,6 +95,10 @@ set -g display-panes-active-colour brightwhite
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',xterm-256color:Tc,sitm@,ritm@,st-256color:Tc,sitm@,ritm@,xterm-termite:Tc,sitm@,ritm@,xterm-256color-italic:Tc,sitm@,ritm@'
 
+# Tmux Plugin Manager
+# git clone https://github.com/tmux-plugins/tpm $XDG_DATA_HOME/tmux/plugins/tpm
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'  # C-a S-i to install
 set -g @plugin 'tmux-plugins/tmux-resurrect'  # C-a C-s to save; C-a C-r to restore
@@ -110,4 +114,4 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 set -g @prefix_highlight_copy_prompt 'VISUAL'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
