Make Tmux use XDG directories

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -27,7 +27,7 @@ bind-key C-b send-keys C-b
 bind-key -n F2 set-option -g status  # toggle statusbar visibility
 
 # Source config shortcut
-bind r source-file ~/.tmux.conf
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
 
 # Map keys to split window in similar manner to terminator, split and create window in current dir
 bind o split-window -v -c "#{pane_current_path}"
@@ -101,17 +101,25 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'  # C-a S-i to install
+
 set -g @plugin 'tmux-plugins/tmux-resurrect'  # C-a C-s to save; C-a C-r to restore
+set -g @resurrect-dir '~/.local/share/tmux/resurrect'
 
 set -g @plugin 'tmux-plugins/tmux-yank' # yank to OS clipboard
 set -g @plugin 'tmux-plugins/tmux-copycat' # better searching, including regexps
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @prefix_highlight_fg black
-set -g @prefix_highlight_bg brightblue
+set -g @prefix_highlight_fg colour0,bold
+set -g @prefix_highlight_bg colour8
+
+set -g @prefix_highlight_empty_prompt ' I '
+set -g @prefix_highlight_empty_attr 'fg=colour0,bold,bg=brightblue' # default is 'fg=default,bg=default'
+
+set -g @prefix_highlight_prefix_prompt 'C'
+
 set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
-set -g @prefix_highlight_copy_prompt 'VISUAL'
+set -g @prefix_highlight_copy_mode_attr 'fg=colour0,bold,bg=yellow'
+set -g @prefix_highlight_copy_prompt 'V'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
+run -b "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
