Tweak color scheme

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -12,9 +12,10 @@ env FISH_NOT_BASH=1
 # }}}
 
 # fonts {{{
-font_size 11.0
+font_size 12.0
 
 font_family      Fantasque Sans Mono
+#font_family      Iosevka
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -34,7 +35,7 @@ cursor                #ebdbb2
 selection_foreground  #655b53
 selection_background  #ebdbb2
 url_color             #d65c0d
-color0                #272727
+color0                #282828
 color8                #928373
 color1                #cc231c
 color9                #fb4833
@@ -50,6 +51,30 @@ color6                #689d69
 color14               #8ec07b
 color7                #a89983
 color15               #ebdbb2
+### gruvbox dark hard env {{{
+env __theme_background=#1d2021
+env __theme_foreground=#ebdbb2
+env __theme_cursor=#ebdbb2
+env __theme_selection_foreground=#655b53
+env __theme_selection_background=#ebdbb2
+env __theme_url_color=#d65c0d
+env __theme_color0=#282828
+env __theme_color8=#928373
+env __theme_color1=#cc231c
+env __theme_color9=#fb4833
+env __theme_color2=#989719
+env __theme_color10=#b8ba25
+env __theme_color3=#d79920
+env __theme_color11=#fabc2e
+env __theme_color4=#448488
+env __theme_color12=#83a597
+env __theme_color5=#b16185
+env __theme_color13=#d3859a
+env __theme_color6=#689d69
+env __theme_color14=#8ec07b
+env __theme_color7=#a89983
+env __theme_color15=#ebdbb2
+### /gruvbox dark hard env }}}
 ## /gruvbox dark hard }}}
 
 ## gruvbox light soft {{{
