--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ set-option -g xterm-keys on
 bind-key C-a send-prefix
 bind-key C-b send-keys C-b
 
-bind-key -n F2 set-option -g status  # toggle statusbar visibility
+bind-key -n F2 setw status
 
 # Source config shortcut
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
@@ -59,7 +59,7 @@ set -g set-clipboard on
 # Theming
 
 # Status bar
-set -g status-style fg=colour7,bg=default
+set -g status-style fg=colour7,bg=colour0
 
 # Status bar -right
 set -g status-left-length 30
@@ -68,20 +68,20 @@ set -g status-right '#[fg=colour15] #(whoami)@#h #[fg=default]%d %b %R '
 # Status bar - left
 set -g status-left-length 30
 set -g status-left-style ''
-set -g status-left '#{prefix_highlight} #S'
+set -g status-left '#{prefix_highlight} #S '
 
 # windows status bar
 set -g window-status-current-format ' #I:#W '
 set -g window-status-format ' #I:#W '
-set -g window-status-current-style 'fg=yellow,bold'
-set -g window-status-style 'fg=colour15'
+set -g window-status-current-style fg=yellow,bold,bg='#1d2021'
+set -g window-status-style fg=colour15
 
 setw -g window-status-activity-style fg=brightwhite
 setw -g window-status-bell-style fg=blue,bg=yellow
 
 # Pane border
-setw -g pane-border-style fg=colour8
-setw -g pane-active-border-style fg=colour11
+setw -g pane-border-style fg=colour0,bold,bg=default
+setw -g pane-active-border-style fg=colour8,bold,bg=default
 
 set -g message-command-style fg=colour0,bg=colour12,bold
 setw -g mode-style fg=colour0,bold,bg=colour11
@@ -112,8 +112,8 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg colour0,bold
 set -g @prefix_highlight_bg colour8
 
-set -g @prefix_highlight_empty_prompt ' I '
-set -g @prefix_highlight_empty_attr 'fg=colour0,bold,bg=brightblue' # default is 'fg=default,bg=default'
+set -g @prefix_highlight_empty_prompt '   '
+set -g @prefix_highlight_empty_attr 'fg=default,bg=default'
 
 set -g @prefix_highlight_prefix_prompt 'C'
 
