--- a/home/.config/ansible/ansible.cfg
+++ b/home/.config/ansible/ansible.cfg
@@ -1,18 +1,39 @@
 [defaults]
 retry_files_enabled = False
-stdout_callback = yaml
+stdout_callback     = yaml
+
+control_path_dir = ~/.local/share/ansible/cp
+inventory        = ~/.local/share/ansible/hosts
+library          = ~/.local/share/ansible/plugins/modules
+local_tmp        = ~/.local/share/ansible/tmp
+module_utils     = ~/.local/share/ansible/plugins/module_utils
+remote_tmp       = ~/.local/share/ansible/tmp
+roles_path       = ~/.local/share/ansible/roles
+
+action_plugins     = ~/.local/share/ansible/plugins/action
+become_plugins     = ~/.local/share/ansible/plugins/become
+cache_plugins      = ~/.local/share/ansible/plugins/cache
+callback_plugins   = ~/.local/share/ansible/plugins/callback
+connection_plugins = ~/.local/share/ansible/plugins/connection
+lookup_plugins     = ~/.local/share/ansible/plugins/lookup
+inventory_plugins  = ~/.local/share/ansible/plugins/inventory
+vars_plugins       = ~/.local/share/ansible/plugins/vars
+filter_plugins     = ~/.local/share/ansible/plugins/filter
+test_plugins       = ~/.local/share/ansible/plugins/test
+terminal_plugins   = ~/.local/share/ansible/plugins/terminal
+strategy_plugins   = ~/.local/share/ansible/plugins/strategy
 
 [colors]
-#highlight = white
-#verbose = blue
-#warn = bright purple
-#error = red
-debug = bright gray
-#deprecate = purple
-#skip = cyan
+#highlight   = white
+#verbose     = blue
+#warn        = bright purple
+#error       = red
+debug        = bright gray
+#deprecate   = purple
+#skip        = cyan
 #unreachable = red
-#ok = green
-#changed = yellow
-#diff_add = green
+#ok          = green
+#changed     = yellow
+#diff_add    = green
 #diff_remove = red
-#diff_lines = cyan
+#diff_lines  = cyan
