--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -168,8 +168,8 @@ bindsym XF86AudioPrev               exec "playerctl previous"
 ## /play/pause/next/prev song }}}
 
 ## screen brightness {{{
-bindsym XF86MonBrightnessUp         exec "xbacklight -inc 20"
-bindsym XF86MonBrightnessDown       exec "xbacklight -dec 20"
+# bindsym XF86MonBrightnessUp         exec "xbacklight -inc 20"
+# bindsym XF86MonBrightnessDown       exec "xbacklight -dec 20"
 ## /screen brightness }}}
 # /MULTIMEDIA KEYS }}}
 
