--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -56,11 +56,11 @@ set -g set-clipboard on
 # Theming
 
 # Status bar
-set -g status-style fg=colour7,bg=colour0
+set -g status-style fg=colour0,bg=colour8
 
 # Status bar -right
 set -g status-left-length 30
-set -g status-right '#[fg=colour15] #(whoami)@#h #[fg=default]%d %b %R '
+set -g status-right '#[fg=colour0]#(echo $LINEGLYPH)#[bg=colour0]#[fg=colour8] #(whoami)@#h #[fg=colour7]%d %b %R '
 
 # Status bar - left
 set -g status-left-length 30
@@ -70,15 +70,15 @@ set -g status-left '#{prefix_highlight} #S '
 # windows status bar
 set -g window-status-current-format ' #I:#W '
 set -g window-status-format ' #I:#W '
-set -g window-status-current-style fg=yellow,bold,bg='#1d2021'
-set -g window-status-style fg=colour15
+set -g window-status-current-style fg=colour15,bold,bg=colour0
+set -g window-status-style fg=colour0
 
 setw -g window-status-activity-style fg=brightwhite
 setw -g window-status-bell-style fg=blue,bg=yellow
 
 # Pane border
-setw -g pane-border-style fg=colour0,bold,bg=default
-setw -g pane-active-border-style fg=colour8,bold,bg=default
+setw -g pane-border-style fg=colour8,bold,bg=default
+setw -g pane-active-border-style fg=colour7,bold,bg=default
 
 set -g message-command-style fg=colour0,bg=colour12,bold
 setw -g mode-style fg=colour0,bold,bg=colour11
