--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -60,7 +60,7 @@ set -g status-style fg=colour0,bg=colour8
 
 # Status bar -right
 set -g status-left-length 30
-set -g status-right '#[fg=colour0]#(echo $LINEGLYPH)#[bg=colour0]#[fg=colour8] #(whoami)@#h #[fg=colour7]%d %b %R '
+set -g status-right '#[fg=colour0]#{POWERLINE_TR}#[bg=colour0]#[fg=colour8] #(whoami)@#h #[fg=colour7]%d %b %R '
 
 # Status bar - left
 set -g status-left-length 30
@@ -68,7 +68,7 @@ set -g status-left-style ''
 set -g status-left '#{prefix_highlight} #S '
 
 # windows status bar
-set -g window-status-current-format ' #I:#W '
+set -g window-status-current-format '#[bg=colour0]#[fg=colour0]#{POWERLINE_BL} #I:#W #{POWERLINE_BR}'
 set -g window-status-format ' #I:#W '
 set -g window-status-current-style fg=colour15,bold,bg=colour0
 set -g window-status-style fg=colour0
