Revamp status line, use long var names

--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Rename the terminals
 set -g set-titles on
-set -g set-titles-string '#W #h'
+set -g set-titles-string '#{window_name} #{host_short}'
 
 # Constrain window's size only if smaller client uses it
 setw -g aggressive-resize on
@@ -56,37 +56,38 @@ set -g set-clipboard on
 # Theming
 
 # Status bar
-set -g status-style fg=colour0,bg=colour8
+set -g status-style fg=colour2,bg=default
 
 # Status bar -right
 set -g status-left-length 30
-set -g status-right '#[fg=colour0]#(echo $LINEGLYPH)#[bg=colour0]#[fg=colour8] #(whoami)@#h #[fg=colour7]%d %b %R '
+set -g status-right '#[fg=colour2]#[bg=default]#[fg=colour2] #(whoami)@#{host} %d %b %R '
 
 # Status bar - left
 set -g status-left-length 30
 set -g status-left-style ''
-set -g status-left '#{prefix_highlight} #S '
+set -g status-left '#{prefix_highlight} #{session_name} '
+set -g status-left ' #{session_name} '
 
 # windows status bar
-set -g window-status-current-format ' #I:#W '
-set -g window-status-format ' #I:#W '
-set -g window-status-current-style fg=colour15,bold,bg=colour0
-set -g window-status-style fg=colour0
+set -g window-status-current-style fg=brightgreen,bold
+set -g window-status-current-format ' #{window_index}:#{window_name} [#{window_panes}#{?window_zoomed_flag,(Z),}] '
 
+set -g window-status-style fg=green
+set -g window-status-format ' #{window_index}:#{window_name} '
 setw -g window-status-activity-style fg=brightwhite
-setw -g window-status-bell-style fg=blue,bg=yellow
+setw -g window-status-bell-style fg=default,bg=brightgreen
 
 # Pane border
-setw -g pane-border-style fg=colour8,bold,bg=default
-setw -g pane-active-border-style fg=colour7,bold,bg=default
+setw -g pane-border-style fg=brightgreen
+setw -g pane-active-border-style fg=green
 
-set -g message-command-style fg=colour0,bg=colour12,bold
-setw -g mode-style fg=colour0,bold,bg=colour11
-set -g message-style fg=colour0,bg=colour12
+set -g message-command-style fg=#000000,bg=brightgreen,bold
+setw -g mode-style fg=#000000,bg=colour2
+set -g message-style fg=#000000,bg=colour2,bold
 
 # Pane number indicator
-set -g display-panes-colour colour239
-set -g display-panes-active-colour brightwhite
+set -g display-panes-colour green
+set -g display-panes-active-colour brightgreen
 
 # Enable 256 colours in terminal
 set -g default-terminal 'tmux-256color'
