--- a/home/.config/Code/User/settings.json
+++ b/home/.config/Code/User/settings.json
@@ -8,25 +8,14 @@
   "bookmarks.navigateThroughAllFiles": true,
   "bookmarks.saveBookmarksInProject": true,
   "breadcrumbs.enabled": true,
-  "code-runner.executorMap": {
-    "python": "python3"
-  },
   "editor.fontFamily": "Fantasque Sans Mono",
   "editor.fontSize": 15,
   "terminal.integrated.env.linux": {"THEME_ENABLE_GLYPHS": null},
   "terminal.integrated.fontSize": 15,
   "editor.minimap.enabled": false,
   "terminal.integrated.fontWeight": "normal",
-  "files.associations": {
-    "**/ansible/**/*.yaml": "ansible",
-    "**/roles/**/*.yaml": "ansible",
-    "**/i3/config": "i3",
-    "**/sway/config": "i3",
-    "gitconfig.j2": "jinja-properties"
-  },
   "markdown.preview.scrollEditorWithPreview": false,
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
+  "telemetry.telemetryLevel": "off",
   "trailing-spaces.trimOnSave": true,
   "vim.handleKeys": {
     "<C-a>": false,
@@ -83,5 +72,15 @@
   "workbench.settings.editor": "json",
   "go.formatTool": "goimports",
   "go.useLanguageServer": true,
-  "todo-tree.tree.showScanModeButton": false
+  "todo-tree.tree.showScanModeButton": false,
+  "todo-tree.general.tags": [
+    "BUG",
+    "HACK",
+    "FIXME",
+    "TODO",
+    "XXX",
+    "[ ]",
+    "[x]"
+  ],
+  "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)"
 }
